fixing icon alignment, adding optomised github icon

--- a/src/sass/components/_icons.scss
+++ b/src/sass/components/_icons.scss
@@ -1,39 +1,34 @@
 .icon a:before {
+	@include AU-space( margin-right, 0.5unit );
 	width: 1.25em;
 	height: 1.25em;
-	@include AU-space( margin-right, 0.5unit );
-	display: block;
-	float: left;
+	display: inline-block;
+	vertical-align: middle;
+	position: relative;
 	content: " ";
 	background-repeat: no-repeat;
 }
 
 
 .icon--github a:before {
-	background-image: AU-svguri('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1792 1792">' +
-		'	<path fill="#{ $AU-color-Action }" d="M896 128q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3
-				.5-76.5t.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192
-				26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57
-				5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7
-				55.5-3.5l23-4q0 38 .5 88.5t.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zm-477 1103q3-7-7-12-10-3-13
-				2-3 7 7 12 9 6 13-2zm31 34q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zm30 45q9-7 0-19-8-13-17-6-9 5 0 18t17 7zm42 42q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20
-				3zm57 25q3-11-13-16-15-4-19 7t13 15q15 6 19-6zm63 5q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zm58-10q-2-11-18-9-16 3-14 15t18 8 14-14z"/>' +
+	background-image: AU-svguri('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 25">' +
+		'<path fill="#{ $AU-color-Action }" d="M12 0a12 12 0 0 0-3.79 23.38c.6.11.82-.26.82-.58v-2c-3.34.73-4-1.61-4-1.61a3.18 3.18 0 0
+				0-1.39-1.79c-1.09-.7.08-.7.08-.7a2.52 2.52 0 0 1 1.84 1.24A2.55 2.55 0 0 0 9 18.9a2.56 2.56 0 0 1 .76-1.6c-2.66-.3-5.47-1.33-5.47-5.93a4.64
+				4.64 0 0 1 1.29-3.22 4.32 4.32 0 0 1 .12-3.18S6.7 4.7 9 6.2a11.37 11.37 0 0 1 6 0c2.3-1.5 3.3-1.23 3.3-1.23a4.31 4.31 0 0 1 .12 3.18 4.63 4.63 0 0 1
+				1.23 3.22c0 4.61-2.81 5.62-5.48 5.92a2.86 2.86 0 0 1 .83 2.22v3.29c0 .39.22.69.83.58A12 12 0 0 0 12 0z"/>' +
 		'</svg>');
 }
 
 .icon--github--dark a:before {
-	background-image: AU-svguri('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1792 1792">' +
-		'	<path fill="#{ $AU-colordark-Action }" d="M896 128q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3
-				.5-76.5t.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192
-				26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57
-				5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7
-				55.5-3.5l23-4q0 38 .5 88.5t.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zm-477 1103q3-7-7-12-10-3-13
-				2-3 7 7 12 9 6 13-2zm31 34q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zm30 45q9-7 0-19-8-13-17-6-9 5 0 18t17 7zm42 42q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20
-				3zm57 25q3-11-13-16-15-4-19 7t13 15q15 6 19-6zm63 5q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zm58-10q-2-11-18-9-16 3-14 15t18 8 14-14z"/>' +
+	background-image: AU-svguri('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 25">' +
+		'<path fill="#{ $AU-colordark-Action }" d="M12 0a12 12 0 0 0-3.79 23.38c.6.11.82-.26.82-.58v-2c-3.34.73-4-1.61-4-1.61a3.18 3.18 0 0
+			0-1.39-1.79c-1.09-.7.08-.7.08-.7a2.52 2.52 0 0 1 1.84 1.24A2.55 2.55 0 0 0 9 18.9a2.56 2.56 0 0 1 .76-1.6c-2.66-.3-5.47-1.33-5.47-5.93a4.64
+			4.64 0 0 1 1.29-3.22 4.32 4.32 0 0 1 .12-3.18S6.7 4.7 9 6.2a11.37 11.37 0 0 1 6 0c2.3-1.5 3.3-1.23 3.3-1.23a4.31 4.31 0 0 1 .12 3.18 4.63 4.63 0 0 1
+			1.23 3.22c0 4.61-2.81 5.62-5.48 5.92a2.86 2.86 0 0 1 .83 2.22v3.29c0 .39.22.69.83.58A12 12 0 0 0 12 0z"/>' +
 		'</svg>');
 }
 
-.icon--download a:before {
+.icon--download--dark a:before {
 	background-image: AU-svguri('<svg xmlns="http://www.w3.org/2000/svg" fill="#{ $AU-colordark-Action }" viewBox="0 0 24 24">' +
 		'<path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>' +
 		'<path d="M0 0h24v24H0z" fill="none"/>' +
@@ -41,16 +36,15 @@
 }
 
 .icon--community a:before {
-	background-image: AU-svguri('<svg fill="#{ $AU-color-Action }" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-		    <path d="M0 0h24v24H0z" fill="none"/>
-		    <path d="M21 6h-2v9H6v2c0 .55.45 1 1 1h11l4 4V7c0-.55-.45-1-1-1zm-4 6V3c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v14l4-4h10c.55 0 1-.45 1-1z"/>
-		</svg>
-		');
+	background-image: AU-svguri('<svg fill="#{ $AU-color-Action }" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">' +
+			'<path d="M0 0h24v24H0z" fill="none"/>' +
+			'<path d="M21 6h-2v9H6v2c0 .55.45 1 1 1h11l4 4V7c0-.55-.45-1-1-1zm-4 6V3c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v14l4-4h10c.55 0 1-.45 1-1z"/>' +
+		'</svg>');
 }
 
 .icon--email a:before {
-	background-image: AU-svguri('<svg fill="#{ $AU-color-Action }" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-		    <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
-		    <path d="M0 0h24v24H0z" fill="none"/>
-		</svg>');
+	background-image: AU-svguri('<svg fill="#{ $AU-color-Action }" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">' +
+			'<path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>' +
+			'<path d="M0 0h24v24H0z" fill="none"/>' +
+		'</svg>');
 }
